Prefer ofX over withX